Fix: brand name text overflow

--- a/app/shared.module.css
+++ b/app/shared.module.css
@@ -124,6 +124,10 @@ button.green > p {
   font-weight: 700;
 }
 
+.bold-link-container > a:hover {
+  text-decoration: none;
+}
+
 .inline-block {
   display: inline-block;
 }
